Fix Dockerfile and build issues for Render deployment
- Replace deprecated npm ci --only=production with npm install
- Add build dependencies (python3, make, g++) for native modules
- Update .dockerignore to exclude unnecessary files
- Ensure proper health check endpoint configuration

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,6 +2,10 @@ node_modules
 npm-debug.log
 .DS_Store
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 .git
 .gitignore
 README.md
@@ -9,3 +13,17 @@ demo.js
 server.log
 logs/*.log
 .vscode
+coverage
+.nyc_output
+test
+tests
+*.test.js
+*.spec.js
+frontend
+src/components
+src/pages
+src/hooks
+public
+tailwind.config.js
+vite.config.ts
+tsconfig.json
