universal workflow engine with bi directional integration between react flow and this

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 NODE_ENV=development
 PORT=8000
 HOST=localhost
+BASE_URL=http://localhost:8000
 
 # Database Configuration
 MONGODB_URI=mongodb://localhost:27017/langchain_workflows
@@ -15,6 +16,12 @@ REDIS_PASSWORD=
 JWT_SECRET=your_super_secret_jwt_key_here_make_it_long_and_complex
 JWT_EXPIRES_IN=7d
 BCRYPT_ROUNDS=12
+
+# Noam App Integration
+NOAM_WEBHOOK_URL=https://noam-app.com/api/webhooks/universal-engine
+NOAM_WEBHOOK_SECRET=your_noam_webhook_secret_here
+NOAM_API_BASE_URL=https://noam-app.com/api
+NOAM_API_KEY=your_noam_api_key_here
 
 # API Keys - AI Providers
 OPENAI_API_KEY=your_openai_api_key_here
