workflow pausing done

--- a/.env.production
+++ b/.env.production
@@ -6,7 +6,7 @@ NODE_ENV=production
 PORT=10000
 
 # Database Configuration
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/langchain-workflows?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://pranjalvatsa86:Mitmanipal123@langchain-workflows.int7xfy.mongodb.net/?retryWrites=true&w=majority&appName=langchain-workflows
 
 # Authentication
 JWT_SECRET=your-super-secure-jwt-secret-key-here
@@ -33,3 +33,5 @@ RATE_LIMIT_MAX_REQUESTS=100
 # Logging
 LOG_LEVEL=info
 LOG_FILE=logs/app.log
+
+REDIS_URL=redis://default:07YHNWegOJNybbW4Mfl6KpdZwRjCUjo7@redis-10794.c93.us-east-1-3.ec2.redns.redis-cloud.com:10794
