--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "@langchain/core": "^0.3.78",
     "@langchain/openai": "^0.6.14",
     "bcryptjs": "^2.4.3",
-    "bull": "^4.12.0",
+    "bullmq": "^5.61.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "express-winston": "^4.2.0",
     "helmet": "^7.1.0",
+    "ioredis": "^5.8.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.35",
@@ -35,7 +36,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
-    "redis": "^4.6.11",
+    "redis": "^4.7.1",
     "socket.io": "^4.7.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
