workflow pause and resume, Bull mq and redis removed

--- a/.env.production
+++ b/.env.production
@@ -35,3 +35,5 @@ LOG_LEVEL=info
 LOG_FILE=logs/app.log
 
 REDIS_URL=redis://default:07YHNWegOJNybbW4Mfl6KpdZwRjCUjo7@redis-10794.c93.us-east-1-3.ec2.redns.redis-cloud.com:10794
+
+OPENAI_API_KEY=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
