--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@langchain/anthropic": "^0.3.3",
     "@langchain/community": "^0.3.0",
     "@langchain/core": "^0.3.78",
+    "@langchain/langgraph": "^1.0.1",
     "@langchain/openai": "^0.6.14",
     "bcryptjs": "^2.4.3",
-    "bullmq": "^5.61.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
@@ -28,7 +28,6 @@
     "express-validator": "^7.0.1",
     "express-winston": "^4.2.0",
     "helmet": "^7.1.0",
-    "ioredis": "^5.8.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.35",
