--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,19 @@ PORT=8000
 HOST=localhost
 BASE_URL=http://localhost:8000
 
+# Workflow Execution Engine
+# Set to 'true' to use LangGraph's native StateGraph for workflow orchestration
+# Set to 'false' (or omit) to use legacy custom workflow engine
+USE_LANGGRAPH=true
+
 # Database Configuration
 MONGODB_URI=mongodb://localhost:27017/langchain_workflows
 MONGODB_URI_TEST=mongodb://localhost:27017/langchain_workflows_test
+
+# LangGraph Checkpointing (for persistent HITL state)
+# For production: Use PostgreSQL checkpointer for workflow state persistence
+# POSTGRES_CHECKPOINT_URL=postgresql://user:password@localhost:5432/workflow_checkpoints
+# For development: Uses in-memory MemorySaver (default)
 
 # Redis Configuration (for job queues and caching)
 REDIS_URL=redis://localhost:6379
