--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@langchain/core": "^0.3.78",
     "@langchain/langgraph": "^1.0.1",
     "@langchain/openai": "^0.6.14",
+    "@mendable/firecrawl-js": "^1.21.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -40,7 +41,8 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
